# pytest-salt-factories

./: .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylint-spelling-words  .pylintrc  .readthedocs.yaml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  noxfile.py  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-testing.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/: CODEOWNERS  actionlint.yaml
.github/actions/setup-actionlint/: action.yml
.github/actions/setup-shellcheck/: action.yml
.github/workflows/: codeql.yml  release.yml  testing.yml
.pre-commit-hooks/: check-changelog-entries.py  sort-pylint-spelling-words.py
changelog/: 100.bugfix.rst  101.bugfix.rst  102.bugfix.rst  103.improvement.rst  104.bugfix.rst  105.bugfix.rst  106.bugfix.rst  108.bugfix.rst  109.improvement.rst  110.bugfix.rst  111.improvement.rst  112.bugfix.rst  113.bugfix.rst  114.bugfix.rst  115.trivial.rst  116.trivial.rst  117.bugfix.rst  118.improvement.rst  120.improvement.rst  122.bugfix.rst  126.bugfix.rst  127.bugfix.rst  129.feature.rst  130.feature.rst  131.feature.rst  133.feature.rst  135.breaking.rst  136.breaking.rst  136.trivial.rst  137.bugfix.rst  140.improvement.rst  140.trivial.rst  144.improvement.rst  145.improvement.rst  145.trivial.rst  146.bugfix.rst  149.improvement.rst  149.trivial.rst  151.trivial.rst  153.trivial.rst  (+59 more)
docs/: conf.py  contents.rst  index.rst  sitevars.rst
docs/_static/css/: inline-include.css
docs/ref/: modules.rst  saltfactories.factories.cli.rst  saltfactories.factories.daemons.rst  saltfactories.factories.rst  saltfactories.plugins.rst  saltfactories.rst  saltfactories.utils.processes.rst  saltfactories.utils.rst
docs/ref/saltfactories/: bases.rst  cli.rst  client.rst  exceptions.rst  index.rst  manager.rst
docs/ref/saltfactories/cli/: call.rst  (+7 more)
docs/topics/: fixtures.rst  install.rst  usage.rst
examples/echo-extension/: LICENSE  README.md  pyproject.toml  setup.cfg
examples/echo-extension/requirements/: base.txt
examples/echo-extension/src/echoext/: loader.py
examples/echo-extension/src/echoext/modules/: echo_mod.py
examples/echo-extension/src/echoext/states/: echo_mod.py
examples/echo-extension/tests/: conftest.py
examples/echo-extension/tests/integration/: conftest.py
examples/echo-extension/tests/integration/modules/: test_echo.py
examples/echo-extension/tests/integration/states/: test_echo.py
examples/echo-extension/tests/unit/modules/: test_echo.py
examples/echo-extension/tests/unit/states/: test_echo.py
requirements/: base.txt  docs.txt  lint.txt  tests.txt  tools.txt
saltfactories/: __init__.py  _version.py  exceptions.py  hookspec.py  markers.py  plugin.py  stats.py
saltfactories/factories/: base.py  manager.py  master.py  minion.py  proxy.py  syndic.py
saltfactories/factories/cli/: __init__.py  call.py  client.py  cloud.py  cp.py  key.py  run.py  salt.py
saltfactories/factories/daemons/: __init__.py  api.py  container.py  docker.py  master.py  minion.py  proxy.py  sshd.py  syndic.py
saltfactories/plugins/: event_listener.py  factories.py  loader.py  log_server.py  markers.py  sysinfo.py  sysstats.py
saltfactories/utils/: __init__.py  cli_scripts.py  compat.py  event_listener.py  loader.py  log_server.py  markers.py  nb_popen.py  platform.py  ports.py  process_stats.py  processes.py  socket.py  tempfiles.py  time.py
saltfactories/utils/coverage/: sitecustomize.py
saltfactories/utils/processes/: __init__.py  bases.py  helpers.py  salt.py  salts.py  sshd.py  stats.py
src/saltfactories/: __init__.py  __main__.py  bases.py  cli.py  client.py  exceptions.py  manager.py  plugin.py
src/saltfactories/cli/: __init__.py  call.py  cloud.py  cp.py  key.py  run.py  salt.py  spm.py  ssh.py
src/saltfactories/daemons/: __init__.py  api.py  container.py  master.py  minion.py  proxy.py  sshd.py  syndic.py
src/saltfactories/factories/: base.py  manager.py
src/saltfactories/plugins/: __init__.py  event_listener.py  factories.py  loader.py  log_server.py  markers.py  sysinfo.py  sysstats.py
src/saltfactories/utils/: __init__.py  cli_scripts.py  functional.py  loader.py  markers.py  platform.py  ports.py  ports.pyi  processes.py  processes.pyi  socket.py  tempfiles.py  time.py  virtualenv.py
tests/: .ruff.toml  conftest.py
tests/functional/: __init__.py  conftest.py  test_cli.py  test_loader.py  test_manager.py  test_sys_info.py  test_sys_stats.py
tests/functional/factories/: conftest.py  test_master_factory.py  test_minion_factory.py  test_proxy_minion_factory.py  test_syndic_factory.py
tests/functional/loader/: test_fixture_deps.py  test_loader.py
tests/functional/markers/: test_destructive_test.py  test_expensive_test.py  test_requires_network.py  test_requires_salt_modules.py  test_requires_salt_states.py  test_skip_if_binaries_missing.py  test_skip_if_not_root.py  test_skip_on_aarch64.py  test_skip_on_aix.py  test_skip_on_darwin.py  test_skip_on_freebsd.py  test_skip_on_linux.py  test_skip_on_netbsd.py  test_skip_on_openbsd.py  test_skip_on_platforms.py  test_skip_on_salt_system_install.py  test_skip_on_salt_system_service.py  test_skip_on_smartos.py  test_skip_on_spawning_platform.py  test_skip_on_sunos.py  test_skip_on_windows.py  test_skip_unless_on_aarch64.py  test_skip_unless_on_aix.py  test_skip_unless_on_darwin.py  test_skip_unless_on_freebsd.py  test_skip_unless_on_linux.py  test_skip_unless_on_netbsd.py  test_skip_unless_on_openbsd.py  test_skip_unless_on_platforms.py  test_skip_unless_on_smartos.py  test_skip_unless_on_spawning_platform.py  test_skip_unless_on_sunos.py  test_skip_unless_on_windows.py
tests/functional/utils/: test_loader.py  test_tempfiles.py
tests/integration/: conftest.py
tests/scenarios/examples/: conftest.py  test_echoext.py
tests/unit/: test_exceptions.py
tests/unit/utils/: test_cli_scripts.py  test_platform.py  test_platforms.py  test_ports.py  test_random_string.py  test_time.py
tests/utils/: test_cli_scripts.py  test_ports.py
tools/: __init__.py  pre_commit.py
(+146 files in other folders)
