[build-system]
requires = ["setuptools>=50.3.2", "wheel", "setuptools-declarative-requirements", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/saltfactories/version.py"
write_to_template = "# pylint: skip-file\n\n__version__ = \"{version}\"\n"

[tool.towncrier]
package = "saltfactories"
filename = "CHANGELOG.rst"
directory = "changelog/"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/saltstack/pytest-salt-factories/issues/{issue}>`_"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
  showcontent = true

[tool.ruff]
line-length = 120
target-version = "py37"
src = [
  "src",
  "test"
]
extend-exclude = [
  ".nox",
]
ignore-init-module-imports = true
builtins = [
  "__opts__",
  "__salt__",
  "__context__",
  "__grains__",
  "__pillar__",
  "__salt_system_encoding__",
]

[tool.ruff.per-file-ignores]
"src/saltfactories/utils/ports.py" = ["F403"]
"src/saltfactories/utils/ports.pyi" = ["F403"]
"src/saltfactories/utils/processes.py" = ["F403"]
"src/saltfactories/utils/processes.pyi" = ["F403"]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"
