[metadata]
name = pytest-salt-factories
description = Pytest Salt Plugin
long_description = file: README.rst
author = Pedro Algarvio
author_email = pedro@algarvio.me
url = https://github.com/saltstack/pytest-salt-factories
project_urls =
    Source=https://github.com/saltstack/pytest-salt-factories
    Tracker=https://github.com/saltstack/pytest-salt-factories/issues
license = Apache Software License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.5
setup_requires =
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements

[options.extras_require]
docker=
  docker
salt=
  salt>=3001

[requirements-files]
install_requires = requirements/base.txt
extras_require =
  docs = requirements/docs.txt
  lint = requirements/lint.txt
  tests = requirements/tests.txt

[options.entry_points]
console_scripts =
  salt-factories = saltfactories.cli:main
pytest11=
  salt-factories = saltfactories.plugin
  salt-factories-factories = saltfactories.plugins.factories
  salt-factories-markers = saltfactories.plugins.markers
  salt-factories-sysinfo = saltfactories.plugins.sysinfo
  salt-factories-sysstats = saltfactories.plugins.sysstats
  salt-factories-event-listener = saltfactories.plugins.event_listener
  salt-factories-log-server = saltfactories.plugins.log_server
  salt-factories-loader-mock = saltfactories.plugins.loader

[bdist_wheel]
universal = false
