[metadata]
name = echoext
description = Echo Extension
long_description = file: README.md
long_description_content_type = text/markdown
author = Pedro Algarvio
author_email = pedro@algarvio.me
keywords = salt-extension
url = https://github.com/saltstack/pytest-salt-factories
project_urls =
    Source=https://github.com/saltstack/pytest-salt-factories
    Tracker=https://github.com/saltstack/pytest-salt-factories/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  module_dirs = echoext.loader:get_module_dirs
  states_dirs = echoext.loader:get_states_dirs

[requirements-files]
install_requires = requirements/base.txt
extras_require =
  tests = requirements/tests.txt

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
